tests/script_errors/lexer_unterminated_heredoc/error.txt
Error: 
    1 | """
      | ^^ It looks like you forgot to terminate a here doc with with a closing '"""'